# playwright-py-sample

./: .env.dev  .env.prod  .gitignore  justfile  pyproject.toml
.github/actions/notify-failure/: action.yml
.github/actions/setup-test/: action.yml
.github/workflows/: dispatch-smoke.yml  pr-status-badge.yml  smoke.yml
src/: conftest.py
src/pages/: first_page.py  home.py
src/tests/: test_abc.py  test_login.py
